--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "LEEDAEHYOUNG-TodoList",
+  "name": "leedaehyoung-todolist",
   "version": "0.1.0",
   "private": true,
+  "main": "dist-electron/main.js",
   "scripts": {
     "dev": "next dev -p 719",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"wait-on http://localhost:719 && tsc -p electron -w\" \"wait-on http://localhost:719 && tsc -p electron && electron .\"",
+    "electron:build": "node scripts/build-electron.js"
   },
   "dependencies": {
     "next": "14.2.5",
@@ -16,11 +19,33 @@
     "remark-gfm": "4.0.0"
   },
   "devDependencies": {
-    "typescript": "5.6.2",
     "@types/node": "20.11.30",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
+    "electron": "^39.2.7",
+    "electron-builder": "^26.0.12",
+    "electron-is-dev": "^3.0.1",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "typescript": "5.6.2",
+    "wait-on": "^9.0.3"
+  },
+  "build": {
+    "appId": "com.leedaehyoung.todolist",
+    "productName": "LEEDAEHYOUNG-TodoList",
+    "mac": {
+      "target": "dmg",
+      "icon": "build/icon.png"
+    },
+    "files": [
+      "dist-electron/**/*",
+      "out/**/*",
+      "package.json"
+    ],
+    "directories": {
+      "output": "dist"
+    }
   }
 }
